--- a/src/style/weui.less
+++ b/src/style/weui.less
@@ -55,6 +55,9 @@
 // grid
 @import "./widget/weui-grid/weui-grid";
 
+// header
+@import "./widget/weui-header/weui-header";
+
 // copyright
 @import "./widget/weui-footer/weui-footer";
 
